// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tokeniser Specific case Comments 1`] = `
[
  {
    "keyword": "func",
    "location": {
      "column": 1,
      "line": 3,
    },
    "type": "keyword",
  },
  {
    "identifier": "main",
    "location": {
      "column": 6,
      "line": 3,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 10,
      "line": 3,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 11,
      "line": 3,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 13,
      "line": 3,
    },
    "symbol": "{",
    "type": "symbol",
  },
  {
    "comment": "this is a comment",
    "location": {
      "column": 3,
      "line": 4,
    },
    "type": "comment",
  },
  {
    "location": {
      "column": 1,
      "line": 5,
    },
    "symbol": "}",
    "type": "symbol",
  },
]
`;

exports[`Tokeniser Specific case Empty string template 1`] = `
[
  {
    "location": {
      "column": 1,
      "line": 1,
    },
    "type": "string_template_start",
  },
  {
    "location": {
      "column": 3,
      "line": 1,
    },
    "type": "string_template_end",
  },
]
`;

exports[`Tokeniser Specific case Floats 1`] = `
[
  {
    "keyword": "func",
    "location": {
      "column": 1,
      "line": 2,
    },
    "type": "keyword",
  },
  {
    "identifier": "main",
    "location": {
      "column": 6,
      "line": 2,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 10,
      "line": 2,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 11,
      "line": 2,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 13,
      "line": 2,
    },
    "symbol": "{",
    "type": "symbol",
  },
  {
    "keyword": "let",
    "location": {
      "column": 3,
      "line": 3,
    },
    "type": "keyword",
  },
  {
    "identifier": "num",
    "location": {
      "column": 7,
      "line": 3,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 11,
      "line": 3,
    },
    "symbol": "=",
    "type": "symbol",
  },
  {
    "float": 123.456,
    "location": {
      "column": 13,
      "line": 3,
    },
    "type": "float",
  },
  {
    "location": {
      "column": 1,
      "line": 4,
    },
    "symbol": "}",
    "type": "symbol",
  },
]
`;

exports[`Tokeniser Specific case Int addition 1`] = `
[
  {
    "keyword": "func",
    "location": {
      "column": 1,
      "line": 2,
    },
    "type": "keyword",
  },
  {
    "identifier": "main",
    "location": {
      "column": 6,
      "line": 2,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 10,
      "line": 2,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 11,
      "line": 2,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 13,
      "line": 2,
    },
    "symbol": "{",
    "type": "symbol",
  },
  {
    "keyword": "let",
    "location": {
      "column": 3,
      "line": 3,
    },
    "type": "keyword",
  },
  {
    "identifier": "num",
    "location": {
      "column": 7,
      "line": 3,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 11,
      "line": 3,
    },
    "symbol": "=",
    "type": "symbol",
  },
  {
    "location": {
      "column": 13,
      "line": 3,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "int": 123,
    "location": {
      "column": 14,
      "line": 3,
    },
    "type": "int",
  },
  {
    "location": {
      "column": 18,
      "line": 3,
    },
    "symbol": "+",
    "type": "symbol",
  },
  {
    "int": 456,
    "location": {
      "column": 20,
      "line": 3,
    },
    "type": "int",
  },
  {
    "location": {
      "column": 23,
      "line": 3,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 25,
      "line": 3,
    },
    "symbol": "-",
    "type": "symbol",
  },
  {
    "int": 1,
    "location": {
      "column": 27,
      "line": 3,
    },
    "type": "int",
  },
  {
    "location": {
      "column": 1,
      "line": 4,
    },
    "symbol": "}",
    "type": "symbol",
  },
]
`;

exports[`Tokeniser Specific case Integers 1`] = `
[
  {
    "keyword": "func",
    "location": {
      "column": 1,
      "line": 2,
    },
    "type": "keyword",
  },
  {
    "identifier": "main",
    "location": {
      "column": 6,
      "line": 2,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 10,
      "line": 2,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 11,
      "line": 2,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 13,
      "line": 2,
    },
    "symbol": "{",
    "type": "symbol",
  },
  {
    "keyword": "let",
    "location": {
      "column": 3,
      "line": 3,
    },
    "type": "keyword",
  },
  {
    "identifier": "num",
    "location": {
      "column": 7,
      "line": 3,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 11,
      "line": 3,
    },
    "symbol": "=",
    "type": "symbol",
  },
  {
    "int": 123,
    "location": {
      "column": 13,
      "line": 3,
    },
    "type": "int",
  },
  {
    "location": {
      "column": 1,
      "line": 4,
    },
    "symbol": "}",
    "type": "symbol",
  },
]
`;

exports[`Tokeniser Specific case Reads hello world example 1`] = `
[
  {
    "keyword": "func",
    "location": {
      "column": 1,
      "line": 3,
    },
    "type": "keyword",
  },
  {
    "identifier": "main",
    "location": {
      "column": 6,
      "line": 3,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 10,
      "line": 3,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 11,
      "line": 3,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 13,
      "line": 3,
    },
    "symbol": "{",
    "type": "symbol",
  },
  {
    "identifier": "print",
    "location": {
      "column": 3,
      "line": 4,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 8,
      "line": 4,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 9,
      "line": 4,
    },
    "type": "string_template_start",
  },
  {
    "literal": "Hello, World!",
    "location": {
      "column": 23,
      "line": 4,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 24,
      "line": 4,
    },
    "type": "string_template_end",
  },
  {
    "location": {
      "column": 24,
      "line": 4,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 1,
      "line": 5,
    },
    "symbol": "}",
    "type": "symbol",
  },
]
`;

exports[`Tokeniser Specific case String addition 1`] = `
[
  {
    "keyword": "func",
    "location": {
      "column": 1,
      "line": 2,
    },
    "type": "keyword",
  },
  {
    "identifier": "main",
    "location": {
      "column": 6,
      "line": 2,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 10,
      "line": 2,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 11,
      "line": 2,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 13,
      "line": 2,
    },
    "symbol": "{",
    "type": "symbol",
  },
  {
    "keyword": "let",
    "location": {
      "column": 3,
      "line": 3,
    },
    "type": "keyword",
  },
  {
    "identifier": "name",
    "location": {
      "column": 7,
      "line": 3,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 12,
      "line": 3,
    },
    "symbol": "=",
    "type": "symbol",
  },
  {
    "location": {
      "column": 14,
      "line": 3,
    },
    "type": "string_template_start",
  },
  {
    "literal": "John",
    "location": {
      "column": 19,
      "line": 3,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 21,
      "line": 3,
    },
    "type": "string_template_end",
  },
  {
    "location": {
      "column": 21,
      "line": 3,
    },
    "symbol": "+",
    "type": "symbol",
  },
  {
    "location": {
      "column": 23,
      "line": 3,
    },
    "type": "string_template_start",
  },
  {
    "literal": " Doe",
    "location": {
      "column": 28,
      "line": 3,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 1,
      "line": 4,
    },
    "type": "string_template_end",
  },
  {
    "location": {
      "column": 1,
      "line": 4,
    },
    "symbol": "}",
    "type": "symbol",
  },
]
`;

exports[`Tokeniser Specific case String template with nested expressions 1`] = `
[
  {
    "location": {
      "column": 1,
      "line": 1,
    },
    "type": "string_template_start",
  },
  {
    "literal": "Result: ",
    "location": {
      "column": 10,
      "line": 1,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 10,
      "line": 1,
    },
    "type": "string_template_expression_start",
  },
  {
    "identifier": "add",
    "location": {
      "column": 11,
      "line": 1,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 14,
      "line": 1,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "identifier": "x",
    "location": {
      "column": 15,
      "line": 1,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 16,
      "line": 1,
    },
    "symbol": ",",
    "type": "symbol",
  },
  {
    "identifier": "y",
    "location": {
      "column": 18,
      "line": 1,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 19,
      "line": 1,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 21,
      "line": 1,
    },
    "symbol": "+",
    "type": "symbol",
  },
  {
    "int": 1,
    "location": {
      "column": 23,
      "line": 1,
    },
    "type": "int",
  },
  {
    "location": {
      "column": 24,
      "line": 1,
    },
    "type": "string_template_expression_end",
  },
  {
    "location": {
      "column": 26,
      "line": 1,
    },
    "type": "string_template_end",
  },
]
`;

exports[`Tokeniser Specific case String templates with expressions 1`] = `
[
  {
    "location": {
      "column": 1,
      "line": 1,
    },
    "type": "string_template_start",
  },
  {
    "literal": "hello ",
    "location": {
      "column": 8,
      "line": 1,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 8,
      "line": 1,
    },
    "type": "string_template_expression_start",
  },
  {
    "identifier": "name",
    "location": {
      "column": 9,
      "line": 1,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 13,
      "line": 1,
    },
    "type": "string_template_expression_end",
  },
  {
    "literal": "!",
    "location": {
      "column": 15,
      "line": 1,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 16,
      "line": 1,
    },
    "type": "string_template_end",
  },
]
`;

exports[`Tokeniser Specific case String templates with multiple expressions 1`] = `
[
  {
    "location": {
      "column": 1,
      "line": 1,
    },
    "type": "string_template_start",
  },
  {
    "literal": "Hello ",
    "location": {
      "column": 8,
      "line": 1,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 8,
      "line": 1,
    },
    "type": "string_template_expression_start",
  },
  {
    "identifier": "firstName",
    "location": {
      "column": 9,
      "line": 1,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 18,
      "line": 1,
    },
    "type": "string_template_expression_end",
  },
  {
    "literal": " ",
    "location": {
      "column": 20,
      "line": 1,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 20,
      "line": 1,
    },
    "type": "string_template_expression_start",
  },
  {
    "identifier": "lastName",
    "location": {
      "column": 21,
      "line": 1,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 29,
      "line": 1,
    },
    "type": "string_template_expression_end",
  },
  {
    "literal": ", you are ",
    "location": {
      "column": 40,
      "line": 1,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 40,
      "line": 1,
    },
    "type": "string_template_expression_start",
  },
  {
    "identifier": "age",
    "location": {
      "column": 41,
      "line": 1,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 44,
      "line": 1,
    },
    "type": "string_template_expression_end",
  },
  {
    "literal": " years old!",
    "location": {
      "column": 56,
      "line": 1,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 57,
      "line": 1,
    },
    "type": "string_template_end",
  },
]
`;

exports[`Tokeniser Specific case String templates without expressions 1`] = `
[
  {
    "location": {
      "column": 1,
      "line": 1,
    },
    "type": "string_template_start",
  },
  {
    "literal": "hello world",
    "location": {
      "column": 13,
      "line": 1,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 14,
      "line": 1,
    },
    "type": "string_template_end",
  },
]
`;

exports[`Tokeniser Specific case Variable addition 1`] = `
[
  {
    "keyword": "func",
    "location": {
      "column": 1,
      "line": 2,
    },
    "type": "keyword",
  },
  {
    "identifier": "main",
    "location": {
      "column": 6,
      "line": 2,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 10,
      "line": 2,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 11,
      "line": 2,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 13,
      "line": 2,
    },
    "symbol": "{",
    "type": "symbol",
  },
  {
    "keyword": "let",
    "location": {
      "column": 3,
      "line": 3,
    },
    "type": "keyword",
  },
  {
    "identifier": "first_name",
    "location": {
      "column": 7,
      "line": 3,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 18,
      "line": 3,
    },
    "symbol": "=",
    "type": "symbol",
  },
  {
    "location": {
      "column": 20,
      "line": 3,
    },
    "type": "string_template_start",
  },
  {
    "literal": "John",
    "location": {
      "column": 25,
      "line": 3,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 3,
      "line": 4,
    },
    "type": "string_template_end",
  },
  {
    "keyword": "let",
    "location": {
      "column": 3,
      "line": 4,
    },
    "type": "keyword",
  },
  {
    "identifier": "last_name",
    "location": {
      "column": 7,
      "line": 4,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 17,
      "line": 4,
    },
    "symbol": "=",
    "type": "symbol",
  },
  {
    "location": {
      "column": 19,
      "line": 4,
    },
    "type": "string_template_start",
  },
  {
    "literal": "Doe",
    "location": {
      "column": 23,
      "line": 4,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 3,
      "line": 6,
    },
    "type": "string_template_end",
  },
  {
    "keyword": "let",
    "location": {
      "column": 3,
      "line": 6,
    },
    "type": "keyword",
  },
  {
    "identifier": "name",
    "location": {
      "column": 7,
      "line": 6,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 12,
      "line": 6,
    },
    "symbol": "=",
    "type": "symbol",
  },
  {
    "identifier": "first_name",
    "location": {
      "column": 14,
      "line": 6,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 25,
      "line": 6,
    },
    "symbol": "+",
    "type": "symbol",
  },
  {
    "location": {
      "column": 27,
      "line": 6,
    },
    "type": "string_template_start",
  },
  {
    "literal": " ",
    "location": {
      "column": 29,
      "line": 6,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 31,
      "line": 6,
    },
    "type": "string_template_end",
  },
  {
    "location": {
      "column": 31,
      "line": 6,
    },
    "symbol": "+",
    "type": "symbol",
  },
  {
    "identifier": "last_name",
    "location": {
      "column": 33,
      "line": 6,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 1,
      "line": 7,
    },
    "symbol": "}",
    "type": "symbol",
  },
]
`;

exports[`Tokeniser Specific case Variable definitions 1`] = `
[
  {
    "keyword": "func",
    "location": {
      "column": 1,
      "line": 3,
    },
    "type": "keyword",
  },
  {
    "identifier": "main",
    "location": {
      "column": 6,
      "line": 3,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 10,
      "line": 3,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 11,
      "line": 3,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 13,
      "line": 3,
    },
    "symbol": "{",
    "type": "symbol",
  },
  {
    "keyword": "let",
    "location": {
      "column": 3,
      "line": 4,
    },
    "type": "keyword",
  },
  {
    "identifier": "name",
    "location": {
      "column": 7,
      "line": 4,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 12,
      "line": 4,
    },
    "symbol": "=",
    "type": "symbol",
  },
  {
    "location": {
      "column": 14,
      "line": 4,
    },
    "type": "string_template_start",
  },
  {
    "literal": "John Doe",
    "location": {
      "column": 23,
      "line": 4,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 3,
      "line": 5,
    },
    "type": "string_template_end",
  },
  {
    "identifier": "print",
    "location": {
      "column": 3,
      "line": 5,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 8,
      "line": 5,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 9,
      "line": 5,
    },
    "type": "string_template_start",
  },
  {
    "literal": "Hello, World!",
    "location": {
      "column": 23,
      "line": 5,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 24,
      "line": 5,
    },
    "type": "string_template_end",
  },
  {
    "location": {
      "column": 24,
      "line": 5,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 1,
      "line": 6,
    },
    "symbol": "}",
    "type": "symbol",
  },
]
`;

exports[`Tokeniser code_examples folder Tokenises '0_print_hello.spot 1`] = `
[
  {
    "keyword": "func",
    "location": {
      "column": 1,
      "line": 2,
    },
    "type": "keyword",
  },
  {
    "identifier": "main",
    "location": {
      "column": 6,
      "line": 2,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 10,
      "line": 2,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 11,
      "line": 2,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 13,
      "line": 2,
    },
    "symbol": "{",
    "type": "symbol",
  },
  {
    "identifier": "print",
    "location": {
      "column": 5,
      "line": 3,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 10,
      "line": 3,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 11,
      "line": 3,
    },
    "type": "string_template_start",
  },
  {
    "literal": "Hello, world!",
    "location": {
      "column": 25,
      "line": 3,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 26,
      "line": 3,
    },
    "type": "string_template_end",
  },
  {
    "location": {
      "column": 26,
      "line": 3,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 1,
      "line": 4,
    },
    "symbol": "}",
    "type": "symbol",
  },
]
`;

exports[`Tokeniser code_examples folder Tokenises '1_variables.spot 1`] = `
[
  {
    "keyword": "func",
    "location": {
      "column": 1,
      "line": 2,
    },
    "type": "keyword",
  },
  {
    "identifier": "main",
    "location": {
      "column": 6,
      "line": 2,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 10,
      "line": 2,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 11,
      "line": 2,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 13,
      "line": 2,
    },
    "symbol": "{",
    "type": "symbol",
  },
  {
    "keyword": "let",
    "location": {
      "column": 5,
      "line": 3,
    },
    "type": "keyword",
  },
  {
    "identifier": "name",
    "location": {
      "column": 9,
      "line": 3,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 14,
      "line": 3,
    },
    "symbol": "=",
    "type": "symbol",
  },
  {
    "location": {
      "column": 16,
      "line": 3,
    },
    "type": "string_template_start",
  },
  {
    "literal": "John Doe",
    "location": {
      "column": 25,
      "line": 3,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 5,
      "line": 4,
    },
    "type": "string_template_end",
  },
  {
    "keyword": "let",
    "location": {
      "column": 5,
      "line": 4,
    },
    "type": "keyword",
  },
  {
    "identifier": "age",
    "location": {
      "column": 9,
      "line": 4,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 13,
      "line": 4,
    },
    "symbol": "=",
    "type": "symbol",
  },
  {
    "int": 36,
    "location": {
      "column": 15,
      "line": 4,
    },
    "type": "int",
  },
  {
    "identifier": "print",
    "location": {
      "column": 5,
      "line": 6,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 10,
      "line": 6,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 11,
      "line": 6,
    },
    "type": "string_template_start",
  },
  {
    "literal": "Hello, my name is ",
    "location": {
      "column": 30,
      "line": 6,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 30,
      "line": 6,
    },
    "type": "string_template_expression_start",
  },
  {
    "identifier": "name",
    "location": {
      "column": 31,
      "line": 6,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 35,
      "line": 6,
    },
    "type": "string_template_expression_end",
  },
  {
    "literal": " and I am ",
    "location": {
      "column": 46,
      "line": 6,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 46,
      "line": 6,
    },
    "type": "string_template_expression_start",
  },
  {
    "identifier": "age",
    "location": {
      "column": 47,
      "line": 6,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 50,
      "line": 6,
    },
    "type": "string_template_expression_end",
  },
  {
    "literal": " years old.",
    "location": {
      "column": 62,
      "line": 6,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 63,
      "line": 6,
    },
    "type": "string_template_end",
  },
  {
    "location": {
      "column": 63,
      "line": 6,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 1,
      "line": 7,
    },
    "symbol": "}",
    "type": "symbol",
  },
]
`;

exports[`Tokeniser code_examples folder Tokenises '2_addition.spot 1`] = `
[
  {
    "keyword": "func",
    "location": {
      "column": 1,
      "line": 2,
    },
    "type": "keyword",
  },
  {
    "identifier": "main",
    "location": {
      "column": 6,
      "line": 2,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 10,
      "line": 2,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 11,
      "line": 2,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 13,
      "line": 2,
    },
    "symbol": "{",
    "type": "symbol",
  },
  {
    "keyword": "let",
    "location": {
      "column": 5,
      "line": 3,
    },
    "type": "keyword",
  },
  {
    "identifier": "sum",
    "location": {
      "column": 9,
      "line": 3,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 13,
      "line": 3,
    },
    "symbol": "=",
    "type": "symbol",
  },
  {
    "int": 2,
    "location": {
      "column": 15,
      "line": 3,
    },
    "type": "int",
  },
  {
    "location": {
      "column": 17,
      "line": 3,
    },
    "symbol": "+",
    "type": "symbol",
  },
  {
    "int": 3,
    "location": {
      "column": 19,
      "line": 3,
    },
    "type": "int",
  },
  {
    "identifier": "print",
    "location": {
      "column": 5,
      "line": 4,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 10,
      "line": 4,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 11,
      "line": 4,
    },
    "type": "string_template_start",
  },
  {
    "literal": "The sum of 2 and 3 is ",
    "location": {
      "column": 34,
      "line": 4,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 34,
      "line": 4,
    },
    "type": "string_template_expression_start",
  },
  {
    "identifier": "sum",
    "location": {
      "column": 35,
      "line": 4,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 38,
      "line": 4,
    },
    "type": "string_template_expression_end",
  },
  {
    "location": {
      "column": 40,
      "line": 4,
    },
    "type": "string_template_end",
  },
  {
    "location": {
      "column": 40,
      "line": 4,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 1,
      "line": 5,
    },
    "symbol": "}",
    "type": "symbol",
  },
]
`;

exports[`Tokeniser code_examples folder Tokenises '3_ifs.spot 1`] = `
[
  {
    "keyword": "func",
    "location": {
      "column": 1,
      "line": 2,
    },
    "type": "keyword",
  },
  {
    "identifier": "main",
    "location": {
      "column": 6,
      "line": 2,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 10,
      "line": 2,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 11,
      "line": 2,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 13,
      "line": 2,
    },
    "symbol": "{",
    "type": "symbol",
  },
  {
    "comment": "TODO: what is a boolean but an enum with two cases?",
    "location": {
      "column": 5,
      "line": 3,
    },
    "type": "comment",
  },
  {
    "keyword": "let",
    "location": {
      "column": 5,
      "line": 4,
    },
    "type": "keyword",
  },
  {
    "identifier": "isAuthorized",
    "location": {
      "column": 9,
      "line": 4,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 22,
      "line": 4,
    },
    "symbol": "=",
    "type": "symbol",
  },
  {
    "identifier": "True",
    "location": {
      "column": 24,
      "line": 4,
    },
    "type": "identifier",
  },
  {
    "keyword": "if",
    "location": {
      "column": 5,
      "line": 6,
    },
    "type": "keyword",
  },
  {
    "identifier": "isAuthorized",
    "location": {
      "column": 8,
      "line": 6,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 21,
      "line": 6,
    },
    "symbol": "{",
    "type": "symbol",
  },
  {
    "identifier": "print",
    "location": {
      "column": 9,
      "line": 7,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 14,
      "line": 7,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 15,
      "line": 7,
    },
    "type": "string_template_start",
  },
  {
    "literal": "Access granted.",
    "location": {
      "column": 31,
      "line": 7,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 32,
      "line": 7,
    },
    "type": "string_template_end",
  },
  {
    "location": {
      "column": 32,
      "line": 7,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 5,
      "line": 8,
    },
    "symbol": "}",
    "type": "symbol",
  },
  {
    "keyword": "else",
    "location": {
      "column": 7,
      "line": 8,
    },
    "type": "keyword",
  },
  {
    "location": {
      "column": 12,
      "line": 8,
    },
    "symbol": "{",
    "type": "symbol",
  },
  {
    "identifier": "print",
    "location": {
      "column": 9,
      "line": 9,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 14,
      "line": 9,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 15,
      "line": 9,
    },
    "type": "string_template_start",
  },
  {
    "literal": "Access denied.",
    "location": {
      "column": 30,
      "line": 9,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 31,
      "line": 9,
    },
    "type": "string_template_end",
  },
  {
    "location": {
      "column": 31,
      "line": 9,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 5,
      "line": 10,
    },
    "symbol": "}",
    "type": "symbol",
  },
  {
    "keyword": "if",
    "location": {
      "column": 5,
      "line": 12,
    },
    "type": "keyword",
  },
  {
    "location": {
      "column": 8,
      "line": 12,
    },
    "symbol": "!",
    "type": "symbol",
  },
  {
    "identifier": "isAuthorized",
    "location": {
      "column": 9,
      "line": 12,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 22,
      "line": 12,
    },
    "symbol": "{",
    "type": "symbol",
  },
  {
    "identifier": "print",
    "location": {
      "column": 9,
      "line": 13,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 14,
      "line": 13,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 15,
      "line": 13,
    },
    "type": "string_template_start",
  },
  {
    "literal": "isAuthorized False",
    "location": {
      "column": 34,
      "line": 13,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 35,
      "line": 13,
    },
    "type": "string_template_end",
  },
  {
    "location": {
      "column": 35,
      "line": 13,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 5,
      "line": 14,
    },
    "symbol": "}",
    "type": "symbol",
  },
  {
    "keyword": "else",
    "location": {
      "column": 7,
      "line": 14,
    },
    "type": "keyword",
  },
  {
    "location": {
      "column": 12,
      "line": 14,
    },
    "symbol": "{",
    "type": "symbol",
  },
  {
    "identifier": "print",
    "location": {
      "column": 9,
      "line": 15,
    },
    "type": "identifier",
  },
  {
    "location": {
      "column": 14,
      "line": 15,
    },
    "symbol": "(",
    "type": "symbol",
  },
  {
    "location": {
      "column": 15,
      "line": 15,
    },
    "type": "string_template_start",
  },
  {
    "literal": "isAuthorized True",
    "location": {
      "column": 33,
      "line": 15,
    },
    "type": "string_literal",
  },
  {
    "location": {
      "column": 34,
      "line": 15,
    },
    "type": "string_template_end",
  },
  {
    "location": {
      "column": 34,
      "line": 15,
    },
    "symbol": ")",
    "type": "symbol",
  },
  {
    "location": {
      "column": 5,
      "line": 16,
    },
    "symbol": "}",
    "type": "symbol",
  },
  {
    "location": {
      "column": 1,
      "line": 17,
    },
    "symbol": "}",
    "type": "symbol",
  },
]
`;
